src/test/ui/span/slice-borrow.nll.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/slice-borrow.rs:16:28
   |
LL |         let x: &[isize] = &vec![1, 2, 3, 4, 5];
   |                            ^^^^^^^^^^^^^^^^^^^ temporary value does not live long enough
LL |         y = &x[1..];
LL |     }
   |     - temporary value only lives until here
LL |     y.use_ref();
   |     - borrow later used here
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
